Massive refactor to improve test speed.